# Competitive-Programming

./: .autocp  .gitignore  CMakeLists.txt  cache.pkl  run_tests.sh  similarity_detection.py  sort_files.py  tags_table.md
AtCoder/Beginner Contest 436/: MagicSquare.cpp  o-padding.cpp
AtCoder/BeginnerContest438/: 1Dpuyopuyo.cpp  FirstContestoftheYear.cpp  Substring2.cpp
CSES/: .autocp  WeirdAlgorithm.cpp  apartments.py  concert_tickets.py  ferris_wheel.py  restaurant_customers.py
CSES/CP/: Sorting and searching.canvas
CSES/Introductory/: BitStrings.cpp  MissingNumber.cpp  (+6 more)
Codeforces/: .autocp  Is_your_horseshoe_on_the_other_hoof.py  MEX_Destruction.py  a+b_again.py  a_helpful_maths.py  a_way_too_long_words.py  a_word_capitalisation.py  amusing_joke.py  anton_and_danik.py  anton_and_polyhedrons.py  array_reodering.py  arrival_of_the_general.py  avtobus.py  balanced_array.py  bear_and_big_brother.py  beautiful_matrix.py  beautiful_year.py  bit++.py  boring_apartments.py  boy_or_girl.py  brick_wall.py  choosing_teams.py  collatz_conjecture.py  divisibility_problem.py  division.py  domino_piling.py  elephant.py  ezzat_and_two_subsequences.py  fair_division.py  find_the_array.py  game_with_colored_marbles.py  games.py  greedy_monocarp.py  holiday_of_equality.py  in_search_of_an_easy_problem.py  insomnia_cure.py  kevin_and_permutation.py  king_keykhosrow_mystery.py  line_trip.py  lucky.py  (+32 more)
Jean-Perrin/: .autocp  BookClub.java  DiceCombinations.py  SocialBots.java  bcd.py  crosswords.py  cup_covering.py  d.py  dynamic_range_minimum_queries.py  programme.py  yet_satisfiability_again.py  z.py
MIT_contest/: .autocp  a.py  aab.py  g.py  missing_number_queries.py  score.py  toy_marbles.py  traveling.py
USACO/: MixingMilk.cpp  ShellGame.cpp  SpeedingTicket.cpp  TheBovineShuffle.cpp  TheBucketList.cpp  TheCow-Signal.cpp  TheLostCow.cpp
templates/: index.html
(+90 files in other folders)
